regular firebase for now. Bootstrap on

--- a/src/Components/App.css
+++ b/src/Components/App.css
@@ -26,3 +26,9 @@ ul.nav.nav-tabs {
   color: cornflowerblue;
   padding: 10px;
 }
+
+.SignInBox {
+  background-color: black;
+  color: cornflowerblue;
+  padding: 10px;
+}
