minor listener change

--- a/src/Board.css
+++ b/src/Board.css
@@ -6,7 +6,7 @@
 
 .grass {
   background-color: green;
-  /*background-image: url('http://opengameart.org/sites/default/files/grass03_0.png');*/
+  background-image: url('http://opengameart.org/sites/default/files/grass03_0.png');
   height: 11%;
   width: 11%;
   float: left;
@@ -19,7 +19,7 @@
 
 .cement {
   background: green;
-  /*background-image: url('http://opengameart.org/sites/default/files/grass03_0.png');*/
+  background-image: url('http://opengameart.org/sites/default/files/grass03_0.png');
   height: 11%;
   width: 11%;
   float: left;
@@ -34,7 +34,7 @@
 
 .crate{
   background: green;
-  /*background-image: url('http://opengameart.org/sites/default/files/grass03_0.png');*/
+  background-image: url('http://opengameart.org/sites/default/files/grass03_0.png');
   height: 11%;
   width: 11%;
   float: left;
