currently styling board

--- a/src/Components/Game.css
+++ b/src/Components/Game.css
@@ -25,8 +25,7 @@
 }
 
 .grass {
-  background-color: green;
-  /*background-image: url('http://opengameart.org/sites/default/files/grass03_0.png');*/
+  background-image: url("http://i.imgur.com/8VvWcuc.jpg");
   height: 11%;
   width: 11%;
   float: left;
@@ -53,8 +52,7 @@
 }
 
 .crate{
-  background: green;
-  /*background-image: url('http://opengameart.org/sites/default/files/grass03_0.png');*/
+ background-image: url("http://i.imgur.com/IRKpGBY.png");
   height: 11%;
   width: 11%;
   float: left;
