--- a/src/Styles/Game.css
+++ b/src/Styles/Game.css
@@ -1,5 +1,5 @@
 .tileContainer {
-  max-width: 65vw;
+  max-width: 100vw;
   height: 100%;
 }
 
@@ -12,15 +12,25 @@
 }
 
 .game {
+  position: absolute;
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 100%;
-  height: 80vh;
+  width: 80vw;
+  height: 90vh;
+  padding-top: 5vh;
+  padding-bottom: 20vh;
+  padding-left: 25vw;
 }
 
+/*.game:after {
+  content: "";
+  display: block;
+  padding-bottom: 100%;
+}*/
 
-.bigContainer {
+
+/*.bigContainer {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
@@ -29,7 +39,7 @@
   height: 20%;
   background-color: black;
   padding: 15px;
-}
+}*/
 
 .grass {
   position: relative;
