--- a/src/Styles/Game.css
+++ b/src/Styles/Game.css
@@ -11,16 +11,20 @@
   margin-right: 3%;
 }
 
+.gameCont {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+  width: 100%;
+}
+
 .game {
   position: absolute;
   display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 80vw;
-  height: 90vh;
-  padding-top: 5vh;
-  padding-bottom: 20vh;
-  padding-left: 25vw;
+  width: 600px;
+  height: 600px;
 }
 
 /*.game:after {
